[package]
name = "stream-check-rust"
version = "0.3.0"
authors = ["segler <segler_alex@web.de>"]

[dependencies]
av-stream-info-rust = "0.6.1"
clap = "2.33.0"
colored = "1.8.0"
env_logger = "0.6.2"
hostname = "0.1.5"
mysql = "16.0.2"
native-tls = "0.2.3"
reqwest = "0.9.19"
threadpool = "1.7.1"
url = "2.1.0"
website-icon-extract = "0.4.1"